@@ -1,4 +1,5 @@
 - NEW: High-scores list when long pressing on challenges.
+- DEV: added HighscoresCursorAdapter class to present nicely highscores in their list
 - DEV: Bumped the targetSdkVersion to 18 (4.3) - no impact expected
 - DEV: added HighscoresList Activity with all list layouts pertaining to it
 - DEV: smaller lint corrections.
